--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/nunito": "^0.1.0",
-    "@expo/vector-icons": "^10.2.1",
+    "@expo/vector-icons": "^10.0.0",
     "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.9.2",
@@ -18,17 +18,19 @@
     "expo": "~39.0.2",
     "expo-font": "~8.3.0",
     "expo-linear-gradient": "~8.3.0",
+    "expo-notifications": "~0.7.2",
     "expo-splash-screen": "~0.6.2",
     "expo-status-bar": "~1.0.2",
-    "expo-updates": "~0.3.2",
+    "expo-updates": "~0.3.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "~0.63.3",
+    "react-native": "0.63.3",
     "react-native-awesome-alerts": "^1.4.2",
     "react-native-dropdownalert": "^4.3.0",
     "react-native-emoji-rain": "0.0.1",
     "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-image-helper": "0.0.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-notification-banner": "^2.0.0",
     "react-native-reanimated": "~1.13.0",
@@ -37,10 +39,11 @@
     "react-native-typography": "^1.4.1",
     "react-native-unimodules": "~0.11.0",
     "react-native-vector-icons": "^7.1.0",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "~0.13.7",
     "react-navigation": "^4.4.2",
     "react-redux": "^7.2.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "expo-constants": "~9.2.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
