--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,15 +4,14 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 platform :ios, '10.0'
 pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
+pod 'RNImageHelper', :path => '../node_modules/react-native-image-helper/ios'
 
 target 'mobileflashcards' do
   use_unimodules!
   config = use_native_modules!
 
   use_react_native!(:path => config["reactNativePath"])
-
   # Enables Flipper.
-  #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable these next few lines.
   use_flipper!
